--- a/views/index.ejs
+++ b/views/index.ejs
@@ -6,32 +6,7 @@
 <!--<![endif]-->
 
 <head>
-
-    <!--- Basic Page Needs
-   ================================================== -->
-    <meta charset="utf-8">
-    <title>Sparrow - Free Responsive HTML5/CSS3 Template</title>
-    <meta name="description" content="">
-    <meta name="author" content="">
-
-    <!-- Mobile Specific Metas
-   ================================================== -->
-    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-
-    <!-- CSS
-    ================================================== -->
-    <link rel="stylesheet" href="css/default.css">
-    <link rel="stylesheet" href="css/layout.css">
-    <link rel="stylesheet" href="css/media-queries.css">
-
-    <!-- Script
-   ================================================== -->
-    <script src="js/modernizr.js"></script>
-
-    <!-- Favicons
-	================================================== -->
-    <link rel="shortcut icon" href="favicon.ico">
-
+    <% include ./partials/header.ejs %>
 </head>
 
 <body>
