--- a/views/index.ejs
+++ b/views/index.ejs
@@ -314,7 +314,7 @@
             <div class="eight columns offset-1">
 
                 <h1><a href="/index">Start coding!</a></h1>
-                <p>Looking for an awesome and reliable platform? Try <a href="https://codeforces.com/"><span>Codeforces</span></a>.
+                <p>Looking for an awesome and reliable platform? Try <a href="/home"><span>codemight</span></a>.
                 </p>
 
             </div>
