--- a/views/progress.ejs
+++ b/views/progress.ejs
@@ -38,15 +38,16 @@
         <div id="page-content" class="row">
 
             <div id="primary" class="eight columns">
+                <h1>Leaderboard</h1>
                 <% for(let i = 0; i < result.length; ++i){ %>
                 <article class="post">
 
                     <div class="entry-header cf">
 
                         <h1 class="half" style="display: inline-block;"><a href="single.html" title="">
-                                <%= result[i].name %></a></h1>
+                                <%= i+1 %>. <%= result[i].name %></a></h1>
                         <h1 class="half pull-right"><a href="single.html" title="">
-                                <%= result[i].score %></a></h1>
+                                <%= result[i].sum %></a></h1>
 
 
                     </div>
