--- a/views/progressform.ejs
+++ b/views/progressform.ejs
@@ -22,7 +22,7 @@
         <div class="row">
 
             <div class="ten columns centered text-center">
-                <h1>Add new institute<span>.</span></h1>
+                <h1>Add new progress<span>.</span></h1>
 
                 <p>Aenean condimentum, lacus sit amet luctus lobortis, dolores et quas molestias excepturi
                     enim tellus ultrices elit, amet consequat enim elit noneas sit amet luctu. </p>
