--- a/views/progress.ejs
+++ b/views/progress.ejs
@@ -21,7 +21,7 @@
         <div class="row">
 
             <div class="ten columns centered text-center">
-                <h1>All contests<span>.</span></h1>
+                <h1>All progresses<span>.</span></h1>
 
                 <p>Aenean condimentum, lacus sit amet luctus lobortis, dolores et quas molestias excepturi
                     enim tellus ultrices elit, amet consequat enim elit noneas sit amet luctu. </p>
