--- a/views/questionform.ejs
+++ b/views/questionform.ejs
@@ -20,7 +20,7 @@
         <div class="row">
 
             <div class="ten columns centered text-center">
-                <h1>Add new institute<span>.</span></h1>
+                <h1>Add new question<span>.</span></h1>
 
                 <p>Aenean condimentum, lacus sit amet luctus lobortis, dolores et quas molestias excepturi
                     enim tellus ultrices elit, amet consequat enim elit noneas sit amet luctu. </p>
